--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,8 +6,7 @@
         "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-scientific-terms",
         "streetsidesoftware.code-spell-checker-medical-terms",
-        "sonarsource.sonarlint-vscode",
-        "codecov.codecov"
+        "sonarsource.sonarlint-vscode"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": []
