--- a/cqf-fhir-cr/pom.xml
+++ b/cqf-fhir-cr/pom.xml
@@ -5,33 +5,33 @@
 
   <groupId>org.opencds.cqf.fhir</groupId>
   <artifactId>cqf-fhir-cr</artifactId>
-  <version>4.3.0-SNAPSHOT</version>
+  <version>4.3.0</version>
   <name>FHIR Clinical Reasoning (Operations)</name>
   <description>Implementations of clinical reasoning operations</description>
 
   <parent>
     <groupId>org.opencds.cqf.fhir</groupId>
     <artifactId>cqf-fhir</artifactId>
-    <version>4.3.0-SNAPSHOT</version>
+    <version>4.3.0</version>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>org.opencds.cqf.fhir</groupId>
       <artifactId>cqf-fhir-cql</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>4.3.0</version>
     </dependency>
     <dependency>
       <groupId>org.opencds.cqf.fhir</groupId>
       <artifactId>cqf-fhir-utility</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>4.3.0</version>
     </dependency>
 
     <!-- test dependencies-->
     <dependency>
       <groupId>org.opencds.cqf.fhir</groupId>
       <artifactId>cqf-fhir-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>4.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
