--- a/cqf-fhir-cql/pom.xml
+++ b/cqf-fhir-cql/pom.xml
@@ -5,21 +5,21 @@
 
   <groupId>org.opencds.cqf.fhir</groupId>
   <artifactId>cqf-fhir-cql</artifactId>
-  <version>4.3.0</version>
+  <version>4.4.0-SNAPSHOT</version>
   <name>FHIR Clinical Reasoning (CQL)</name>
   <description>Tools, utilities, code gen to support CQL in FHIR Clinical Reasoning operations</description>
 
   <parent>
     <groupId>org.opencds.cqf.fhir</groupId>
     <artifactId>cqf-fhir</artifactId>
-    <version>4.3.0</version>
+    <version>4.4.0-SNAPSHOT</version>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>org.opencds.cqf.fhir</groupId>
       <artifactId>cqf-fhir-utility</artifactId>
-      <version>4.3.0</version>
+      <version>4.4.0-SNAPSHOT</version>
     </dependency>
       <dependency>
       <groupId>org.cqframework</groupId>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.opencds.cqf.fhir</groupId>
       <artifactId>cqf-fhir-test</artifactId>
-      <version>4.3.0</version>
+      <version>4.4.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
