--- a/.github/workflows/compile_against_cdr-cr.yml
+++ b/.github/workflows/compile_against_cdr-cr.yml
@@ -30,7 +30,7 @@ jobs:
       working-directory: ./.github/workflows/cdr_cr_check
       env:
         TRIGGER_TOKEN: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
-        READ_API_TOKEN: ${{ secrets.GITLAB_READ_API_TOKEN }}
+        READ_API_TOKEN: ${{ secrets.GITLAB_READ_API_TOKEN_V2 }}
         CLINICAL_REASONING_BRANCH: ${{ github.head_ref || github.ref_name }}
         # When run via the manual run, this will be set. When run in a PR, it will be blank.
         CDR_CR_BRANCH: ${{ inputs.cdr_cr_branch }}
