--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,14 +25,19 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '21'
-        cache: 'maven'
+
+    - uses: gradle/actions/setup-gradle@v4
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
         languages: java-kotlin
-        build-mode: autobuild
+        build-mode: manual
+
+    - name: Build
+      run: ./gradlew assemble
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
