fix: accidentally committed vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -171,5 +171,9 @@
         "cSpell.advanced.feature.useReferenceProviderWithRename": true,
         "cSpell.advanced.feature.useReferenceProviderRemove": "/^#+\\s/"
     },
+    "sonarlint.connectedMode.project": {
+      "connectionId": "cqframework",
+      "projectKey": "cqframework_clinical-reasoning"
+    },
     "java.debug.settings.onBuildFailureProceed": true
 }
