--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: '21'
+        java-version: '17'
 
     - uses: gradle/actions/setup-gradle@v4
 
@@ -36,7 +36,7 @@ jobs:
         build-mode: manual
 
     - name: Build
-      run: ./gradlew clean assemble
+      run: ./gradlew clean assemble --no-daemon
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
