disable Gradle build cache in CodeQL workflow to ensure compilation is observable

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,9 +24,11 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: '17'
+        java-version: '21'
 
     - uses: gradle/actions/setup-gradle@v4
+      with:
+        cache-disabled: true
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
