pin GitHub Actions to commit SHAs and enable Gradle dependency verification

--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -10,15 +10,15 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+      - uses: actions/setup-java@c1e323688fd81a25caa38c78aa6df2d33d3e20d9 # v4
         with:
           distribution: 'temurin'
           java-version: '21'
-      - uses: gradle/actions/setup-gradle@v4
+      - uses: gradle/actions/setup-gradle@0b6dd653ba04f4f93bf581ec31e66cbd7dcb644d # v4
       - name: spotlessCheck
         run: ./gradlew spotlessCheck
-      - uses: mshick/add-pr-comment@v2
+      - uses: mshick/add-pr-comment@c96a9caed2a8cc0ed55e1f105725e383d63569d0 # v2
         if: always()
         with:
           message-success: |
