--- a/.github/workflows/check-pr.yaml
+++ b/.github/workflows/check-pr.yaml
@@ -17,26 +17,26 @@ jobs:
           os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
         with:
             fetch-depth: 0 #shallow clone for better sonarqube analysis
-      - uses: actions/cache@v4
+      - uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
         with:
           path: ~/.fhir
           key: ${{ runner.os }}-fhir-${{ hashFiles('**/*.*') }}
           restore-keys: |
             ${{ runner.os }}-fhir-
-      - uses: actions/cache@v4
+      - uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
         if: matrix.os == 'ubuntu-latest'
         with:
             path: ~/.sonar/cache
             key: ${{ runner.os }}-sonar
             restore-keys: ${{ runner.os }}-sonar
-      - uses: actions/setup-java@v4
+      - uses: actions/setup-java@c1e323688fd81a25caa38c78aa6df2d33d3e20d9 # v4
         with:
             distribution: 'temurin'
             java-version: '21'
-      - uses: gradle/actions/setup-gradle@v4
+      - uses: gradle/actions/setup-gradle@0b6dd653ba04f4f93bf581ec31e66cbd7dcb644d # v4
       - name: Resolve linked builds
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -53,7 +53,7 @@ jobs:
             SONAR_TOKEN: ${{ secrets.SONAR_QUBE_022026 }}
         run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
       - name: Publish test report
-        uses: mikepenz/action-junit-report@v4
+        uses: mikepenz/action-junit-report@db71d41eb79864e25ab0337e395c352e84523afe # v4
         if: (success() || failure()) && matrix.os == 'ubuntu-latest'
         with:
           report_paths: "**/build/test-results/test/TEST-*.xml"
