--- a/.github/workflows/compile_against_cdr-cr.yml
+++ b/.github/workflows/compile_against_cdr-cr.yml
@@ -14,12 +14,12 @@ jobs:
   compile-against-cdr-cr:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       name: Checkout
     - name: Install poetry
       run: pipx install poetry
     - name: Setup Python
-      uses: actions/setup-python@v4.6.0
+      uses: actions/setup-python@57ded4d7d5e986d7296eab16560982c6dd7c923b # v4.6.0
       with:
         python-version: '3.10'
     - run: poetry install
